--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,3 +1,15 @@
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static "music/style.css" %}"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+
+{% comment %}Episode 26 #begin{% endcomment %}
+<nav class="navbar navbar-default">
+    <div class="container-fluid"></div>
+    <div class="navbar-header">
+        <a class="navbar-brand" href="{%  url 'music:index'  %}">Vibber</a>
+    </div>
+</nav>
+
 {% if all_albums %}
     <h3>Here are all your Albums:</h3>
     <ul>
