--- a/music/static/music/style.css
+++ b/music/static/music/style.css
@@ -1,3 +1,12 @@
 body {
     background: white url("images/background.png");
 }
+
+.navbar {
+    margin-top: -20px;
+    border-radius: 0;
+}
+
+.navbar-brand {
+    font-family: 'Orbitron', cursive;
+}
