--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -8,21 +8,12 @@
     <h1>{{ album.albumTitle }}</h1>
     <h3>{{ album.artist }}</h3>
 
-    {% if error_message %}
-        <p><strong>{{ error_message  }}</strong></p>
-    {% endif %}
-
-    <form action="{% url 'music:favorite' album.id %}" method="post">
-        {% csrf_token %}
-        {% for song in album.song_set.all %}
-            <input type="radio" id="song{{ forloop.counter }}" name="song" value="{{ song.id }}">
-            <label for="song{{ forloop.counter }}">
-                {{ song.songTitle }}
+    {% for song in album.song_set.all %}
+        <label>{{ song.songTitle }}
             {% if song.isFavorite %}
-            <img src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/heart-512.png"  alt="favorite" height="15x"/>
+                <img src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/heart-512.png" alt="favorite"
+                     height="15x"/>
             {% endif %}
-            </label><br>
-        {% endfor %}
-        <input type="submit" value="Favorite">
-    </form>
-{% endblock%}
+        </label><br>
+    {% endfor %}
+{% endblock %}
