--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -2,10 +2,63 @@
 
 {% block body %}
 
-    <ul>
+{% comment %}    <ul>
         {% for album in all_albums %}
             <li><a href="{% url 'music:detail' album.id %}">{{ album.albumTitle }}</a></li>
         {% endfor %}
-    </ul>
+    </ul>{% endcomment %}
 
+
+
+    <div class="albums-container container-fluid">
+
+        <!-- Albums -->
+        <div class="row">
+            {% if all_albums %}
+                {% for album in all_albums %}
+                    <div class="col-sm-4 col-lg-2">
+                        <div class="thumbnail">
+                            <a href="{% url 'music:detail' album.id %}">
+                                <img src="{{ album.albumLogo }}" class="img-responsive">
+                            </a>
+                            <div class="caption">
+                                <h2>{{ album.albumTitle }}</h2>
+                                <h4>{{ album.artist }}</h4>
+
+                                <!-- View Details -->
+                                <a href="{% url 'music:detail' album.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
+
+                                <!-- Delete Album -->
+                                <form action="#" method="post" style="display: inline;">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="album_id" value="{{ album.id }}" />
+                                    <button type="submit" class="btn btn-default btn-sm">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </form>
+
+                                <!-- Favorite Album -->
+                                <a href="#" class="btn btn-default btn-sm btn-favorite" role="button">
+                                    <span class="glyphicon glyphicon-star"></span>
+                                </a>
+
+                            </div>
+                        </div>
+                    </div>
+                    {% cycle '' '' '' '' '' '<div class="clearfix visible-lg"></div>' %}
+                {% endfor %}
+
+                {% comment %}{% else %}
+                <div class="col-sm-12">
+                    <br>
+                    <a href="{% url 'music:create_album' %}">
+                        <button type="button" class="btn btn-success">
+                            <span class="glyphicon glyphicon-plus"></span>&nbsp; Add an Album
+                        </button>
+                    </a>
+                </div>{% endcomment %}
+
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
