--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,19 +1,93 @@
 {% extends 'music/base.html' %}
 
-{% block title %}Detail{% endblock %}
+{% block title %}{{ album }}{% endblock %}
+{% block albums_active %}active{% endblock %}
 
 {% block body %}
-    <img src="{{ album.albumLogo }}" height="400px">
+    <div class="container-fluid songs-container">
 
-    <h1>{{ album.albumTitle }}</h1>
-    <h3>{{ album.artist }}</h3>
+        <div class="row">
 
-    {% for song in album.song_set.all %}
-        <label>{{ song.songTitle }}
-            {% if song.isFavorite %}
-                <img src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/heart-512.png" alt="favorite"
-                     height="15x"/>
-            {% endif %}
-        </label><br>
-    {% endfor %}
+            <!-- Left Album Info -->
+            <div class="col-sm-4 col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <a href="#">
+                            {% if album.albumLogo %}
+                                <img src="{{ album.albumLogo }}" class="img-responsive">
+                            {% else %}
+                                <h3>No image to display</h3>
+                            {% endif %}
+                        </a>
+                        <h1>{{ album.albumTitle }}
+                            <small>{{ album.genre }}</small>
+                        </h1>
+                        <h2>{{ album.artist }}</h2>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right Song Info -->
+            <div class="col-sm-8 col-md-9">
+
+                <ul class="nav nav-pills" style="margin-bottom: 10px;">
+                    <li role="presentation" class="active"><a href="#">View All</a></li>
+                    <li role="presentation"><a href="#">Add New Song</a></li>
+                </ul>
+
+                <div class="panel panel-default">
+                    <div class="panel-body">
+
+                        <h3>All Songs</h3>
+
+                        {% if error_message %}
+                            <p><strong>{{ error_message }}</strong></p>
+                        {% endif %}
+
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th>Title</th>
+                                <th>Audio File</th>
+                                <th>Favorite</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% comment %} Must be redone!!
+                            {% for song in album.song_set.all %}
+                                <tr>
+                                    <td>{{ song.songTitle }}</td>
+                                    <td>
+                                        <a target="_blank" href="{{ song.audio_file.url }}">
+                                            <button type="button" class="btn btn-success btn-xs">
+                                                <span class="glyphicon glyphicon-play"></span>&nbsp; Play
+                                            </button>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="{% url 'music:favorite' song.id %}" class="btn-favorite"><span class="glyphicon glyphicon-star {% if song.is_favorite %}active{% endif %}"></span></a>
+                                    </td>
+                                    <td>
+                                        <form action="{% url 'music:delete_song' album.id song.id %}" method="post" style="display: inline;">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="song_id" value="{{ song.id }}" />
+                                            <button type="submit" class="btn btn-danger btn-xs">
+                                                <span class="glyphicon glyphicon-remove"></span>&nbsp; Delete
+                                            </button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            {% endfor %}{% endcomment %}
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 {% endblock %}
