--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,5 +1,7 @@
 {% extends 'music/base.html' %}
 
+{% block albums_active %}active{% endblock %}
+
 {% block body %}
 
     <div class="albums-container container-fluid">
