--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -14,7 +14,7 @@
                     <div class="panel-body">
                         <a href="#">
                             {% if album.albumLogo %}
-                                <img src="{{ album.albumLogo }}" class="img-responsive">
+                                <img src="{{ album.albumLogo.url }}" class="img-responsive">
                             {% else %}
                                 <h3>No image to display</h3>
                             {% endif %}
