--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -13,7 +13,7 @@
                     <div class="col-sm-4 col-lg-2">
                         <div class="thumbnail">
                             <a href="{% url 'music:detail' album.id %}">
-                                <img src="{{ album.albumLogo }}" class="img-responsive">
+                                <img src="{{ album.albumLogo.url }}" class="img-responsive">
                             </a>
                             <div class="caption">
                                 <h2>{{ album.albumTitle }}</h2>
