--- a/music/templates/music/registration_form.html
+++ b/music/templates/music/registration_form.html
@@ -1,5 +1,5 @@
 {% extends 'music/base.html' %}
-{% block title %}Add a New Album{% endblock %}
+{% block title %}Register{% endblock %}
 {% block albums_active %}active{% endblock %}
 
 {% block body %}
